--- a/DSA_Lab_Report_6.ipynb
+++ b/DSA_Lab_Report_6.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMeCJO/1H+KtPBNtq+Qa70E",
+      "authorship_tag": "ABX9TyOn8+4uny+5uGD+RsLwkZov",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,14 +28,79 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "class Node:\n",
+        "  def __init__(self, data = None, next = None):\n",
+        "    self.data = data\n",
+        "    self.next = next\n",
+        "\n",
+        "def insertNode(number):\n",
+        "  global head, rear\n",
+        "  temp = Node(number)\n",
+        "  if head is None:\n",
+        "    head = rear = temp\n",
+        "  else:\n",
+        "    rear.next = temp\n",
+        "    rear = temp\n",
+        "\n",
+        "def searchNode(key):\n",
+        "  global head\n",
+        "  current = head\n",
+        "  prev = None\n",
+        "  while current is not None:\n",
+        "    if current.data == key:\n",
+        "      if prev is not None:\n",
+        "        prev.next = current.next\n",
+        "        current.next = head\n",
+        "        head = current\n",
+        "      return True\n",
+        "    prev = current\n",
+        "    current = current.next\n",
+        "  return False\n",
+        "\n",
+        "head = None\n",
+        "rear = None\n",
+        "\n",
+        "def display():\n",
+        "  global head\n",
+        "  if head is None:\n",
+        "    print(\"List is empty\")\n",
+        "    return\n",
+        "  temp = head\n",
+        "  print(\"List: \", end=\"\")\n",
+        "  while temp is not None:\n",
+        "    print(temp.data, end=\"\")\n",
+        "    if temp.next is not None:\n",
+        "      print(\" -> \", end=\"\")\n",
+        "    temp = temp.next\n",
+        "  print(\"\\n\")\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "  insertNode(\"a\")\n",
+        "  insertNode(\"b\")\n",
+        "  insertNode(\"c\")\n",
+        "  insertNode(\"d\")\n",
+        "  insertNode(\"e\")\n",
+        "  insertNode(\"f\")\n",
+        "  display()\n",
+        "\n",
+        "  while True:\n",
+        "    letter = (input(\"\\nEnter the letter to be searched: \"))\n",
+        "    if searchNode(letter):\n",
+        "      print(\"Searched:\", letter)\n",
+        "    else:\n",
+        "      print(\"Not found!\")\n",
+        "      break\n",
+        "    display()"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "YDcMwiq0e12E",
-        "outputId": "fae3bcc2-8264-47c1-d61b-032331173c75"
+        "id": "c6HOpg0_qLIC",
+        "outputId": "3db1b80f-ad16-4182-8773-f9b4c6e098b6"
       },
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,71 +173,118 @@
             "Not found!\n"
           ]
         }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_pvJSYpUp7MO",
+        "outputId": "381a8c71-8075-40f2-b92a-ad2aeb302e62"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Doubly Linked List:\n",
+            "1  2  3  4  \n",
+            "Enter item to append at the end: 5\n",
+            "Updated Doubly Linked List:\n",
+            "1  2  3  4  5  \n",
+            "Number of items in the list: 5\n",
+            "Enter item to insert at the front: 0\n",
+            "Updated Doubly Linked List:\n",
+            "0  1  2  3  4  5  \n",
+            "Reversed Doubly Linked List:\n",
+            "5  4  3  2  1  0  \n",
+            "Number of items in the list: 6\n"
+          ]
+        }
       ],
       "source": [
         "class Node:\n",
-        "  def __init__(self, data = None, next = None):\n",
+        "  def __init__(self, data = None, next = None, prev = None):\n",
         "    self.data = data\n",
-        "    self.next = next\n",
+        "    self.next = None\n",
+        "    self.prev = None\n",
         "\n",
-        "def insertNode(number):\n",
-        "  global head, rear\n",
-        "  temp = Node(number)\n",
-        "  if head is None:\n",
-        "    head = rear = temp\n",
-        "  else:\n",
-        "    rear.next = temp\n",
-        "    rear = temp\n",
+        "class DoublyLinkedList:\n",
+        "  def __init__(self):\n",
+        "    self.head = None\n",
+        "    self.rear = None\n",
+        "    self.count = 0\n",
         "\n",
-        "def searchNode(key):\n",
-        "  global head\n",
-        "  current = head\n",
-        "  prev = None\n",
-        "  while current is not None:\n",
-        "    if current.data == key:\n",
-        "      if prev is not None:\n",
-        "        prev.next = current.next\n",
-        "        current.next = head\n",
-        "        head = current\n",
-        "      return True\n",
-        "    prev = current\n",
-        "    current = current.next\n",
-        "  return False\n",
+        "  def appendItem(self, data):\n",
+        "    new_node = Node(data)\n",
+        "    if not self.head:\n",
+        "      self.head = new_node\n",
+        "      self.rear = new_node\n",
+        "    else:\n",
+        "      new_node.prev = self.rear\n",
+        "      self.rear.next = new_node\n",
+        "      self.rear = new_node\n",
+        "    self.count += 1\n",
         "\n",
-        "head = None\n",
-        "rear = None\n",
+        "  def insertItem(self, data):\n",
+        "    new_node = Node(data)\n",
+        "    if not self.head:\n",
+        "      self.head = new_node\n",
+        "      self.rear = new_node\n",
+        "    else:\n",
+        "      new_node.next = self.head\n",
+        "      self.head.prev = new_node\n",
+        "      self.head = new_node\n",
+        "    self.count += 1\n",
         "\n",
-        "def display():\n",
-        "  global head\n",
-        "  if head is None:\n",
-        "    print(\"List is empty\")\n",
-        "    return\n",
-        "  temp = head\n",
-        "  print(\"List: \", end=\"\")\n",
-        "  while temp is not None:\n",
-        "    print(temp.data, end=\"\")\n",
-        "    if temp.next is not None:\n",
-        "      print(\" -> \", end=\"\")\n",
-        "    temp = temp.next\n",
-        "  print(\"\\n\")\n",
+        "  def reverse(self):\n",
+        "    current = self.head\n",
+        "    while current:\n",
+        "      temp = current.next\n",
+        "      current.next = current.prev\n",
+        "      current.prev = temp\n",
+        "      current = temp\n",
+        "    temp = self.head\n",
+        "    self.head = self.rear\n",
+        "    self.rear = temp\n",
+        "\n",
+        "  def display(self):\n",
+        "    current = self.head\n",
+        "    while current:\n",
+        "      print(current.data, end = \"  \")\n",
+        "      current = current.next\n",
+        "    print()\n",
+        "\n",
+        "  def countItem(self):\n",
+        "    return self.count\n",
         "\n",
         "if __name__ == \"__main__\":\n",
-        "  insertNode(\"a\")\n",
-        "  insertNode(\"b\")\n",
-        "  insertNode(\"c\")\n",
-        "  insertNode(\"d\")\n",
-        "  insertNode(\"e\")\n",
-        "  insertNode(\"f\")\n",
-        "  display()\n",
+        "    sequence = DoublyLinkedList()\n",
+        "    sequence.appendItem(1)\n",
+        "    sequence.appendItem(2)\n",
+        "    sequence.appendItem(3)\n",
+        "    sequence.appendItem(4)\n",
+        "    print(\"Doubly Linked List:\")\n",
+        "    sequence.display()\n",
         "\n",
-        "  while True:\n",
-        "    letter = (input(\"\\nEnter the letter to be searched: \"))\n",
-        "    if searchNode(letter):\n",
-        "      print(\"Searched:\", letter)\n",
-        "    else:\n",
-        "      print(\"Not found!\")\n",
-        "      break\n",
-        "    display()"
+        "    itemEnd = int(input(\"Enter item to append at the end: \"))\n",
+        "    sequence.appendItem(itemEnd)\n",
+        "    print(\"Updated Doubly Linked List:\")\n",
+        "    sequence.display()\n",
+        "    print(\"Number of items in the list:\", sequence.countItem())\n",
+        "\n",
+        "    itemStart = int(input(\"Enter item to insert at the front: \"))\n",
+        "    sequence.insertItem(itemStart)\n",
+        "    print(\"Updated Doubly Linked List:\")\n",
+        "    sequence.display()\n",
+        "\n",
+        "    sequence.reverse()\n",
+        "    print(\"Reversed Doubly Linked List:\")\n",
+        "    sequence.display()\n",
+        "    print(\"Number of items in the list:\", sequence.countItem())"
       ]
     }
   ]
